tests/snapshots/examples_fixtures/type_system__TypeSystem__RealProgramBaseInterop.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/RealProgramBaseInterop.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.RealProgramBaseInterop` doesn't match file path `//?/examples/type_system/TypeSystem/RealProgramBaseInterop.flx`.

  examples/type_system/TypeSystem/RealProgramBaseInterop.flx:3:1
  |
3 | module TypeSystem.RealProgramBaseInterop {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
